--- a/site/index2.html
+++ b/site/index2.html
@@ -1,1 +1,9 @@
-
+<!doctype html>
+<html>
+  <head>
+    <title>Hello Joca</title>
+  </head>
+  <body>
+    <div>ola eu sou o joca</div>
+  </body>
+</html>
